[package]
name = "level-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {version = "0.8.0", features=["tga", "filesystem_watcher"]}
rand="0.8.5"
bevy_rapier3d="0.17.0"